# terraquery

./: .gitignore  Dockerfile  README.md  app.py  base_queries.py  docker-compose.yml  generate_data.py  index.html  local_requirements.txt  requirements.txt  schema.sql  train_model_on_schema.py  train_model_on_spider_lite.py
controller/: app.py
database/: schema.sql  tables-only.sql
scripts/: base_queries.py  base_query_analyzer.py  city_queries.py  city_queries_v2.py  generate_data.py  road_queries.py  road_queries_v2.py  test_base_queries.py  train_model_on_schema.py  train_model_on_spider_lite.py  view_webmap.py
spec-generator-model/: Dockerfile  data_augment.py  dataset.jsonl  inference_server.py  train_flan_t5_small.py
terraquery-api/: Cargo.toml  Dockerfile
terraquery-api/scripts/: apply_custom_render.py  classify_tile.py  render_demo_classes.py
terraquery-api/src/: main.rs
terraquery-web-client/: Dockerfile  index.html
